[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/shaders/ColorFade.tres" type="Material" id=1]
[ext_resource path="res://src/ui/TransitionScreen.gd" type="Script" id=2]

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Background:material:shader_param/progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=1]
resource_name = "fade_to_black"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Background:material:shader_param/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.3 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_to_normal"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Background:material:shader_param/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.3, 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "slow_fade_to_black"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Background:material:shader_param/progress")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.75, 1.0 ]
}

[node name="TransitionScreen" type="CanvasLayer"]
pause_mode = 2
layer = 5
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/fade_to_black = SubResource( 1 )
anims/fade_to_normal = SubResource( 3 )
anims/slow_fade_to_black = SubResource( 4 )

[node name="ResumeTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 0.125
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ResumeTimer" to="." method="_on_ResumeTimer_timeout"]
